# ttl_dsl

./: .gitignore  Cargo.toml  memo.md  package.json
desk_docviewer/: Cargo.toml  moon.yml  tauri.conf.json
desk_docviewer/frontend/: package.json
desk_docviewer/frontend/src/app/: layout.tsx
desk_docviewer/frontend/src/components/: Gauge.tsx  MasonryGrid.tsx  PdfContainer.tsx  Price.tsx  StatTable.module.css  StatTable.tsx  TitleMin.tsx
desk_docviewer/frontend/src/mock/: characters.ts
desk_docviewer/frontend/src/utils/: config.ts
desk_docviewer/src/: adapters.rs  constants.rs  lib.rs  main.rs
desk_docviewer/src/app/: _Effects.tsx  _Monitors.tsx  _Resources.tsx  _Skills.tsx  page.tsx
desk_docviewer/src/app/SRDocument/: Inventory.tsx  Last.tsx  Powers.tsx  Summary.tsx  _Effects.tsx  _Indentities.tsx  _Monitors.tsx  _Resources.tsx  _Skills.tsx  _Stats.tsx  page.tsx
desk_docviewer/src/app/mock/: characters.ts
desk_docviewer/src/app/pdfs/: PdfContainer.tsx  route.ts
desk_docviewer/src/commands/: generate_pdf.rs  mod.rs
desk_docviewer/src/components/: Header.tsx  MasonryGrid.tsx  MasonryGridNoSSR.tsx  ParagraphStandard.tsx  Section.tsx  Space.tsx  Text.tsx  TitleMin.tsx  TitleSection.tsx
desk_docviewer/src/components/Icons/: Actions.tsx  Advantage.tsx  BaseIcon.module.css  Damage.tsx  DiceSix.tsx  SpellDistance.tsx  SpellNature.tsx  SpellZone.tsx  Success.tsx
desk_docviewer/src/components/actions/: ActionBox.tsx  Effect.tsx  LoadAction.tsx  RitualAction.tsx  ShotAction.tsx  SimpleAction.tsx  SpellAction.tsx
desk_docviewer/src/components/items/: CompanionBox.tsx  Drone.tsx  Item.tsx  ItemCard.tsx  (+7 more)
desk_docviewer/src/mock/: characters.ts  shrimp.json
desk_docviewer/src/utils/: a4format.ts  getWeights.ts  interleave.ts
desk_docviewer/tests/: print.rs
desk_docviewer/ui/: next.config.js  package.json
lib_interpreter/: Cargo.toml  memo.md
lib_interpreter/src/: lib.rs
lib_interpreter/src/commands/: assemble_from_str.rs
lib_interpreter/src/domain/: mod.rs
lib_interpreter/src/ports/: mod.rs
lib_interpreter/src/statics/: logger.rs
lib_interpreter/src/utils/: mod.rs  random.rs  result.rs  test.rs
lib_interpreter/tests/: shrimp.rs  simple_assembly.rs  small_assembles.rs
lib_interpreter/tests/utils/: mocked_app.rs
lib_ts/: Cargo.toml  package.json
lib_ts/src/: index.ts  lib.rs
lib_ts/src/config_provider_adapter/: js_custom_config.rs  mod.rs
lib_ts/src/formatter_adapters/: js_json_formatter.rs  mod.rs
lib_ts/src/js_interfaces/: mod.rs
lib_ts/src/js_ports/: mod.rs
lib_ts/src/logger_adapters/: js_console_logger.rs  mod.rs
lib_ts/src/resolver_adapters/: js_custom_resolver.rs  mod.rs
lib_ts/src/utils/: mod.rs
lib_ts/tests/: base.test.ts  mocked_resolver_interpreter.test.ts
(+374 files in other folders)
