[package]
name = "lib_ts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lib_interpreter = { path = "../lib_interpreter" }
getrandom = {version = "0.2.11", features = ["js"]}
js-sys = "0.3.66"
wasm-bindgen = "0.2.89"
web-sys = "0.3.66"


[lints.clippy]
new_without_default = "allow"
